fixed footer alignment; changed the bootstrap cdn location

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -7,11 +7,11 @@
 
 .btn-sign,
 .btn-join {
-    background-color: #e50914 !important;
-    color: white !important;
-    padding: 7px 17px !important;
+    background-color: #e50914;
+    color: white;
+    padding: 7px 17px;
     width: 10rem;
-    font-size: 16px !important;
+    font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
@@ -20,13 +20,13 @@
     margin-top: 5rem;
     justify-self: center;
     height: 10rem;
-    font-size: 3rem !important;
+    font-size: 3rem;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center !important;
+    text-align: center;
 }
 
 .btn-join-second {
-    font-size: 2rem !important;
+    font-size: 2rem;
     height: 5rem;
     text-align: center;
     margin-left: 20px;
@@ -67,13 +67,13 @@
         border-bottom: 4px solid red;
         
         & > * {
-            color: white !important;
-            fill: white !important;
+            color: white;
+            fill: white;
         }
     }
 
     &:hover > * {
-        color: white !important;
+        color: white;
         fill: white;
 
     }
@@ -89,6 +89,8 @@
 
     &-content {
         margin-top: 10rem;
+        width: fit-content;
+        margin-left: auto;
     }
 }
 
@@ -100,7 +102,7 @@
 }
 
 .image-cancel {
-    height: 30vh;
+    height: 20vw;
 }
 
 .section-footer {
@@ -113,11 +115,21 @@
 }
 
 .footer-option {
-    display: inline;
+    display: block;
     text-decoration: none;
-    color: gray !important;
+    color: gray;
     margin-bottom: 1.5rem;
     font-size: 1.5rem;
+}
+
+.footer-align {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.footer-vertical {
+    height: 100%;
+    align-items: center;
 }
 
 // Utilities
