--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,25 +1,25 @@
 .landing-page {
     width: fit-content;
     height: fit-content;
-    min-width: 100vw !important;
-    min-height: 100vh !important;
-    max-width: 100vw !important;
-    max-height: 100vh !important;
-    padding: 0 !important;
+    min-width: 100vw;
+    min-height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
+    padding: 0;
     overflow-x: hidden;
 }
 
 .home {
     height: 92vh;
     width: 100%;
-    padding: 0 !important;
-    margin: 0 !important;
+    padding: 0;
+    margin: 0;
     background-image: linear-gradient(to bottom right, rgba(black, 1), rgba(black, .5),rgba(black, .93)), url(/img/HU-en-20190715-popsignuptwoweeks-perspective_alpha_website_small.jpg);
 
     .logo__div {
         width: 100%;
-        padding: 0 !important;
-        margin: 3rem 0 !important;
+        padding: 0;
+        margin: 3rem 0;
     }
 
     .welcome {
@@ -30,27 +30,27 @@
 
 .navigation {
     width: 100%;
-    padding: 0 !important;
-    margin: 0 !important;
-    background-color: #141414 !important;
+    padding: 0;
+    margin: 0;
+    background-color: #141414;
     height: fit-content;
     justify-content: center;
 }
 
 .content {
     width: 100%;
-    padding: 0 !important;
-    margin: 0 !important;
-    background-color: black !important;
-    height: 50vh;
+    padding: 0;
+    margin: 0;
+    background-color: black;
+    height: 30vw;
     justify-content: center;
 }
 
 .footer {
     width: 100%;
-    padding: 0 !important;
-    margin: 0 !important;
-    background-color: black !important;
+    padding: 0;
+    margin: 0;
+    background-color: black;
     height: fit-content;
 }
 
