--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -65,11 +65,11 @@ body {
 .landing-page {
   width: fit-content;
   height: fit-content;
-  min-width: 100vw !important;
-  min-height: 100vh !important;
-  max-width: 100vw !important;
-  max-height: 100vh !important;
-  padding: 0 !important;
+  min-width: 100vw;
+  min-height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
+  padding: 0;
   overflow-x: hidden;
 }
 
@@ -77,15 +77,15 @@ body {
 .home {
   height: 92vh;
   width: 100%;
-  padding: 0 !important;
-  margin: 0 !important;
+  padding: 0;
+  margin: 0;
   background-image: linear-gradient(to bottom right, black, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.93)), url(/img/HU-en-20190715-popsignuptwoweeks-perspective_alpha_website_small.jpg);
 }
 /* line 19, ../sass/_layout.scss */
 .home .logo__div {
   width: 100%;
-  padding: 0 !important;
-  margin: 3rem 0 !important;
+  padding: 0;
+  margin: 3rem 0;
 }
 /* line 25, ../sass/_layout.scss */
 .home .welcome {
@@ -95,9 +95,9 @@ body {
 /* line 31, ../sass/_layout.scss */
 .navigation {
   width: 100%;
-  padding: 0 !important;
-  margin: 0 !important;
-  background-color: #141414 !important;
+  padding: 0;
+  margin: 0;
+  background-color: #141414;
   height: fit-content;
   justify-content: center;
 }
@@ -105,19 +105,19 @@ body {
 /* line 40, ../sass/_layout.scss */
 .content {
   width: 100%;
-  padding: 0 !important;
-  margin: 0 !important;
-  background-color: black !important;
-  height: 50vh;
+  padding: 0;
+  margin: 0;
+  background-color: black;
+  height: 30vw;
   justify-content: center;
 }
 
 /* line 49, ../sass/_layout.scss */
 .footer {
   width: 100%;
-  padding: 0 !important;
-  margin: 0 !important;
-  background-color: black !important;
+  padding: 0;
+  margin: 0;
+  background-color: black;
   height: fit-content;
 }
 
@@ -132,11 +132,11 @@ body {
 /* line 8, ../sass/_components.scss */
 .btn-sign,
 .btn-join {
-  background-color: #e50914 !important;
-  color: white !important;
-  padding: 7px 17px !important;
+  background-color: #e50914;
+  color: white;
+  padding: 7px 17px;
   width: 10rem;
-  font-size: 16px !important;
+  font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
 }
@@ -146,14 +146,14 @@ body {
   margin-top: 5rem;
   justify-self: center;
   height: 10rem;
-  font-size: 3rem !important;
+  font-size: 3rem;
   font-family: Arial, Helvetica, sans-serif;
-  text-align: center !important;
+  text-align: center;
 }
 
 /* line 28, ../sass/_components.scss */
 .btn-join-second {
-  font-size: 2rem !important;
+  font-size: 2rem;
   height: 5rem;
   text-align: center;
   margin-left: 20px;
@@ -200,12 +200,12 @@ body {
 }
 /* line 69, ../sass/_components.scss */
 .menu-active > * {
-  color: white !important;
-  fill: white !important;
+  color: white;
+  fill: white;
 }
 /* line 75, ../sass/_components.scss */
 .menu:hover > * {
-  color: white !important;
+  color: white;
   fill: white;
 }
 
@@ -219,9 +219,11 @@ body {
 /* line 90, ../sass/_components.scss */
 .join-content {
   margin-top: 10rem;
+  width: fit-content;
+  margin-left: auto;
 }
 
-/* line 95, ../sass/_components.scss */
+/* line 97, ../sass/_components.scss */
 .content-text {
   color: white;
   font-size: 3rem;
@@ -229,31 +231,43 @@ body {
   font-weight: 400;
 }
 
-/* line 102, ../sass/_components.scss */
+/* line 104, ../sass/_components.scss */
 .image-cancel {
-  height: 30vh;
+  height: 20vw;
 }
 
-/* line 106, ../sass/_components.scss */
+/* line 108, ../sass/_components.scss */
 .section-footer {
   justify-content: center;
 }
 
-/* line 110, ../sass/_components.scss */
+/* line 112, ../sass/_components.scss */
 .footer-content {
   align-items: center;
 }
 
-/* line 115, ../sass/_components.scss */
+/* line 117, ../sass/_components.scss */
 .footer-option {
-  display: inline;
+  display: block;
   text-decoration: none;
-  color: gray !important;
+  color: gray;
   margin-bottom: 1.5rem;
   font-size: 1.5rem;
 }
 
-/* line 124, ../sass/_components.scss */
+/* line 125, ../sass/_components.scss */
+.footer-align {
+  width: 60%;
+  margin: 0 auto;
+}
+
+/* line 130, ../sass/_components.scss */
+.footer-vertical {
+  height: 100%;
+  align-items: center;
+}
+
+/* line 136, ../sass/_components.scss */
 .margin-small {
   margin-top: 2rem;
 }
